// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Snapshots Should render a bluePlus icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="BluePlus.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a food icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="Food.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a newChat icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="NewChat.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a people icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="People.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a person icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="Person.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a search icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="SearchIcon.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a threeDotsGrey icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="ThreeDotsGray.svg"
/>
`;

exports[`<Icon /> Snapshots Should render a threeDotsWhite icon  correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="ThreeDotsWhite.svg"
/>
`;

exports[`<Icon /> Snapshots Should render an animal icon correctly 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  class="c0"
  src="Animal.svg"
/>
`;
